--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
 </footer>
 
   <script src="js/jquery.js"></script>
+  <script src="js/imagesloaded.js"></script>
   <script src="js/isotope.js"></script>
   <script src="js/script.js"></script>
 
