--- a/beyond.html
+++ b/beyond.html
@@ -50,6 +50,7 @@
 </footer>
 
   <script src="js/jquery.js"></script>
+   <script src="js/imagesloaded.js"></script>
   <script src="js/isotope.js"></script>
   <script src="js/script.js"></script>
 
