--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
 <body>
 
+<div class="progress">
+   <img src="img/alice-mollon-coloured-logo.svg" alt="" class="logo">
+</div>
+
 <section class="container">
   <h1>
     <a href="index.html">
@@ -31,7 +35,9 @@
 
 </section>
 
+
 <div class="grid">
+
  
   <div class="grid-sizer"></div>
     <div class="item">
