--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 
 <body>
 
-<div class="progress">
-   <img src="img/alice-mollon-coloured-logo.svg" alt="" class="logo">
+<div class="loader">
+  <div class="balls">
+   <div class="ball-1"></div>
+   <div class="ball-2"></div>
+   <div class="ball-3"></div>
+  </div>
 </div>
 
 <section class="container">
